Upgrade flink version (#1)
* upgrade flink version

upgrade flink version

* Update pom.xml

version change

* Remove testcases

Remove testcases - add later

* removed different sinks

removed different sinks

* removed sink convertor and use pojo directly

removed sink convertor and use pojo directly

* re-wrote writer using clickhouse client and s3 client

re-wrote writer using clickhouse client and s3 client

* Update ClickHouseWriter.java

better logging

* updated pom and readme

updated pom and readme

* minor changes for handling failed records

minor changes for handling failed records

* setting provided default db

setting provided default db

* added data compression and update ch driver version

added data compression and update ch driver version

* update ch library and json support

update ch library and json support